tree-sitter-ohtml/test/corpus/elements.txt
===
DOCTYPE declaration
===
<!DOCTYPE html>
<html lang="en">
</html>
---

(document
  (doctype)
  (element
    (start_tag (tag_name) (attribute (attribute_name) (quoted_attribute_value)))
    (end_tag (tag_name))))

===
HTML comment
===
<!-- This is a comment -->
<div>content</div>
---

(document
  (comment)
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name))))

===
Self-closing elements
===
<meta charset="utf-8" />
<img src="photo.jpg" alt="A photo" />
---

(document
  (self_closing_element
    (self_closing_tag
      (tag_name)
      (attribute (attribute_name) (quoted_attribute_value))))
  (self_closing_element
    (self_closing_tag
      (tag_name)
      (attribute (attribute_name) (quoted_attribute_value))
      (attribute (attribute_name) (quoted_attribute_value)))))

===
Nested elements
===
<div class="outer">
    <span class="inner">text</span>
</div>
---

(document
  (element
    (start_tag (tag_name) (attribute (attribute_name) (quoted_attribute_value)))
    (element
      (start_tag (tag_name) (attribute (attribute_name) (quoted_attribute_value)))
      (text)
      (end_tag (tag_name)))
    (end_tag (tag_name))))
